<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SongPlay">
    <ImageView
        android:id="@+id/art_imageView"
        android:layout_width="match_parent"
        android:contentDescription="@string/cover"
        android:layout_height="@dimen/three_six_zero_dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/art" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_zero_dp"
        android:background="@android:color/white"
        android:soundEffectsEnabled="true" />
    <TextView
        android:id="@+id/song_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/ten_dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="@dimen/three_six_sp"/>
    <TextView
        android:id="@+id/artist_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="@dimen/two_six_sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/eight_zero_dp"
        android:layout_marginStart="@dimen/two_dp"
        android:layout_marginEnd="@dimen/two_dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/three_zero_dp">

        <ImageButton
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/back"
            android:contentDescription="@string/prev"
            android:onClick="prev"
            android:scaleType="fitCenter"
            android:src="@drawable/pre6" />

        <ImageButton
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/back"
            android:contentDescription="@string/current_play"
            android:onClick="play"
            android:scaleType="fitCenter"
            android:src="@drawable/play6" />

        <ImageButton
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/back"
            android:contentDescription="@string/next"
            android:onClick="next"
            android:scaleType="fitCenter"
            android:src="@drawable/next6" />
    </LinearLayout>

</LinearLayout>